fix: add timeouts, size validation, and configurable canLoad to RestApiClassSource
- Add configurable connect timeout (10s default) and read timeout (30s default)
- Add MAX_RESPONSE_SIZE validation (10MB) before and during download
- Fix silent exception swallowing in URL encoding (use StandardCharsets.UTF_8 directly)
- Make canLoad() configurable (default: disabled to avoid doubling network traffic)
- Add connectTimeout(), readTimeout(), enableCanLoadCheck() builder methods

Issues fixed:
- No timeouts → threads hang forever on slow networks
- No size limits → OOM crashes from multi-GB responses
- Silent exception swallowing → impossible to debug URL encoding failures
- canLoad() doubles network traffic → performance issue

Fixes #53

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>